--- a/EagleEatsMaster/EagleEats.Master
+++ b/EagleEatsMaster/EagleEats.Master
@@ -22,9 +22,9 @@
             </div>
             <ul class="nav navbar-nav">
             <li class="active"><a href="Home.aspx">Home</a></li>
-            <li><a href="SignUp.aspx">Sign Up</a></li>
+            <li><a href="CustomerCenter.aspx">Customer Center</a></li>
             <li><a href="DriverCenter.aspx">Driver Center</a></li>
-            <li><a href="#">About Us</a></li>
+            <li><a href="AboutUs.aspx">About Us</a></li>
             </ul>
             </div>
         </nav>
