--- a/EagleEatsMaster/EagleEats.Master
+++ b/EagleEatsMaster/EagleEats.Master
@@ -5,38 +5,42 @@
 <head runat="server">
     <title>Eagle Eats Web App</title>
 
-    <!--  <link rel="stylesheet" href="style.css" />   -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="/style.css" type="text/css" />
+
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
 <body>
     <div class="container">
         <div>
-        <nav class="navbar navbar-inverse">
-            <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">USI Eagle Eats</a>
-            </div>
-            <ul class="nav navbar-nav">
-            <li class="active"><a href="Home.aspx">Home</a></li>
-            <li><a href="MyDelivery.aspx">MyDelivery</a></li>
-            <li><a href="Route.aspx">MyRoute</a></li>
-            <li><a href="User.aspx">MyUser</a></li>
-            <li><a href="AboutUs.aspx">About Us</a></li>
-            </ul>
-            </div>
-        </nav>
+            <nav class="navbar navbar-inverse">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="#">USI Eagle Eats</a>
+                    </div>
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="Home.aspx">Home</a></li>
+                        <li><a href="MyDelivery.aspx">MyDelivery</a></li>
+                        <li><a href="Route.aspx">MyRoute</a></li>
+                        <li><a href="User.aspx">MyUser</a></li>
+                        <li><a href="AboutUs.aspx">About Us</a></li>
+                    </ul>
+                </div>
+            </nav>
         </div>
-    <form id="form1" runat="server">
-        
-        <div>
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-            </asp:ContentPlaceHolder>
-        </div>
-    </form>
+        <form id="form1" runat="server">
+
+            <div>
+                <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                </asp:ContentPlaceHolder>
+            </div>
+        </form>
     </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 </body>
 </html>
