change to style.css file
update background color and h1 prop font family

--- a/EagleEatsMaster/style.css
+++ b/EagleEatsMaster/style.css
@@ -1,8 +1,9 @@
 ﻿body {
-    background-color: aqua;
+    background-color: slategray;
 
 }
 h1{
-    color: forestgreen;
+    color: black;
+    font-family: Arial;
     align-content: center;
 }
