--- a/EagleEatsMaster/EagleEats.Master
+++ b/EagleEatsMaster/EagleEats.Master
@@ -18,7 +18,7 @@
             <nav class="navbar navbar-inverse">
                 <div class="container-fluid">
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="#">USI Eagle Eats</a>
+                        <a class="navbar-brand" href="Home.aspx">USI Eagle Eats</a>
                     </div>
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="Home.aspx">Home</a></li>
