Created Table Example Data
created user and route sample data
- added buttons to delivery.aspx
- updated the external style sheet

--- a/EagleEatsMaster/style.css
+++ b/EagleEatsMaster/style.css
@@ -1,9 +1,18 @@
 ﻿body {
-    background-color: slategray;
+    background-color: ghostwhite;
 
 }
 h1{
     color: black;
     font-family: Arial;
-    align-content: center;
+    text-align: center;
+}
+h2 {
+    color: black;
+    font-family: Arial;
+    text-align: center;
+}
+p{
+    font-family: Arial;
+    text-align: center;
 }
